feat(translations): add Dutch (nl) translations and implement translation editor hooks
- Added Dutch translations (nl.json) for various components and messages.
- Created `useTranslation` hook for managing translations with fallback logic.
- Implemented `useTranslationEditor` hook for editing translations with DBAL persistence.
- Updated Redux slice for translations to manage locale and overrides.
- Registered new hooks and components in the JSON UI component registry.
- Enhanced the translations slice with async thunks for fetching, upserting, and deleting translations.
- Updated the translations package to include Dutch in supported locales.

--- a/translations/package.json
+++ b/translations/package.json
@@ -12,7 +12,8 @@
     },
     "./en": "./en.json",
     "./es": "./es.json",
-    "./fr": "./fr.json"
+    "./fr": "./fr.json",
+    "./nl": "./nl.json"
   },
   "files": [
     "*.json",
